Test cases of Homepage scenario completed

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\SAURABH\AppData\Local\Temp\testng-eclipse-2138905626\testng-customsuite.xml</span>
+                    <span>C:\Users\SAURABH\AppData\Local\Temp\testng-eclipse--1074675731\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">6 methods,   6 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,32 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.quantum.Header" class="method navigator-link" hash-for-method="BookWorkshopLinkTest">BookWorkshopLinkTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.quantum.Header" class="method navigator-link" hash-for-method="HomeLinkTest">HomeLinkTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.quantum.Header" class="method navigator-link" hash-for-method="LogoLinkTest">LogoLinkTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.quantum.Header" class="method navigator-link" hash-for-method="LogoVisibilityTest">LogoVisibilityTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.quantum.Header" class="method navigator-link" hash-for-method="TestimonialsLinkTest">TestimonialsLinkTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.quantum.Header" class="method navigator-link" hash-for-method="setUp">setUp</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.quantum.Homepage" class="method navigator-link" hash-for-method="FooterNavigation">FooterNavigation</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -146,49 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.quantum.Header</span>
+              <span class="class-name">com.quantum.Homepage</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="BookWorkshopLinkTest">
-                  </a> <!-- BookWorkshopLinkTest -->
-                  <span class="method-name">BookWorkshopLinkTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="HomeLinkTest">
-                  </a> <!-- HomeLinkTest -->
-                  <span class="method-name">HomeLinkTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="LogoLinkTest">
-                  </a> <!-- LogoLinkTest -->
-                  <span class="method-name">LogoLinkTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="LogoVisibilityTest">
-                  </a> <!-- LogoVisibilityTest -->
-                  <span class="method-name">LogoVisibilityTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="TestimonialsLinkTest">
-                  </a> <!-- TestimonialsLinkTest -->
-                  <span class="method-name">TestimonialsLinkTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="setUp">
-                  </a> <!-- setUp -->
-                  <span class="method-name">setUp</span>
+                  <a name="FooterNavigation">
+                  </a> <!-- FooterNavigation -->
+                  <span class="method-name">FooterNavigation</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -196,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\SAURABH\AppData\Local\Temp\testng-eclipse-2138905626\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\SAURABH\AppData\Local\Temp\testng-eclipse--1074675731\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -205,7 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.quantum.Header&quot;/&gt;
+      &lt;class name=&quot;com.quantum.Homepage&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;FooterNavigation&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- com.quantum.Homepage --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -245,36 +189,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(6);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'LogoVisibilityTest')
-data.setCell(0, 2, 'com.quantum.Header')
-data.setCell(0, 3, 6329);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'BookWorkshopLinkTest')
-data.setCell(1, 2, 'com.quantum.Header')
-data.setCell(1, 3, 6250);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'TestimonialsLinkTest')
-data.setCell(2, 2, 'com.quantum.Header')
-data.setCell(2, 3, 6237);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'LogoLinkTest')
-data.setCell(3, 2, 'com.quantum.Header')
-data.setCell(3, 3, 6173);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'HomeLinkTest')
-data.setCell(4, 2, 'com.quantum.Header')
-data.setCell(4, 3, 6123);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'setUp')
-data.setCell(5, 2, 'com.quantum.Header')
-data.setCell(5, 3, 4247);
+data.setCell(0, 1, 'FooterNavigation')
+data.setCell(0, 2, 'com.quantum.Homepage')
+data.setCell(0, 3, 6431);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 35 seconds</span>
+              <span class="suite-total-time">Total running time: 6 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -289,9 +213,60 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">23 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.quantum.Homepage</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">CheckTestimonialTransitionSpeed</span>
+                <br/>
+                <span class="ignored-method-name">VerifyTestimonialCarousel</span>
+                <br/>
+                <span class="ignored-method-name">TestTestimonialEdit</span>
+                <br/>
+                <span class="ignored-method-name">TestTestimonialRemoval</span>
+                <br/>
+                <span class="ignored-method-name">CheckTestimonialTruncation</span>
+                <br/>
+                <span class="ignored-method-name">TestimonialsSectionNavigationTest</span>
+                <br/>
+                <span class="ignored-method-name">CheckTestimonialVisibility</span>
+                <br/>
+                <span class="ignored-method-name">NavigateThroughTestimonials</span>
+                <br/>
+                <span class="ignored-method-name">LoadHomepage</span>
+                <br/>
+                <span class="ignored-method-name">CheckTestimonialFormatting</span>
+                <br/>
+                <span class="ignored-method-name">VerifyTestimonialsSectionPresence</span>
+                <br/>
+                <span class="ignored-method-name">EnsureTestimonialLanguage</span>
+                <br/>
+                <span class="ignored-method-name">VerifyTestimonialQuotes</span>
+                <br/>
+                <span class="ignored-method-name">EnsureTestimonialAttribution</span>
+                <br/>
+                <span class="ignored-method-name">setUp</span>
+                <br/>
+                <span class="ignored-method-name">CheckTestimonialAddition</span>
+                <br/>
+                <span class="ignored-method-name">VerifyTestimonialSorting</span>
+                <br/>
+                <span class="ignored-method-name">FeaturedContent</span>
+                <br/>
+                <span class="ignored-method-name">ValidateTestimonialContent</span>
+                <br/>
+                <span class="ignored-method-name">EnsureTestimonialImagesDisplay</span>
+                <br/>
+                <span class="ignored-method-name">HomepageImages</span>
+                <br/>
+                <span class="ignored-method-name">NavigationCheckTest</span>
+                <br/>
+                <span class="ignored-method-name">CheckTestimonialAuthorNames</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -300,38 +275,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.quantum.Header</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.quantum.Homepage</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="test-method">
-                <span class="method-name">setUp</span>
-                <span class="method-start">5127 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">LogoVisibilityTest</span>
-                <span class="method-start">9405 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">LogoLinkTest</span>
-                <span class="method-start">15738 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">HomeLinkTest</span>
-                <span class="method-start">21913 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">BookWorkshopLinkTest</span>
-                <span class="method-start">28040 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">TestimonialsLinkTest</span>
-                <span class="method-start">34300 ms</span>
+                <span class="method-name">FooterNavigation</span>
+                <span class="method-start">4403 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">40659 ms</span>
+                <span class="method-start">10940 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
