--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,25 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.quantum.Homepage.CheckTestimonialTransitionSpeed</td></tr>
+<tr><td>com.quantum.Homepage.VerifyTestimonialCarousel</td></tr>
+<tr><td>com.quantum.Homepage.TestTestimonialEdit</td></tr>
+<tr><td>com.quantum.Homepage.TestTestimonialRemoval</td></tr>
+<tr><td>com.quantum.Homepage.CheckTestimonialTruncation</td></tr>
+<tr><td>com.quantum.Homepage.TestimonialsSectionNavigationTest</td></tr>
+<tr><td>com.quantum.Homepage.CheckTestimonialVisibility</td></tr>
+<tr><td>com.quantum.Homepage.NavigateThroughTestimonials</td></tr>
+<tr><td>com.quantum.Homepage.LoadHomepage</td></tr>
+<tr><td>com.quantum.Homepage.CheckTestimonialFormatting</td></tr>
+<tr><td>com.quantum.Homepage.VerifyTestimonialsSectionPresence</td></tr>
+<tr><td>com.quantum.Homepage.EnsureTestimonialLanguage</td></tr>
+<tr><td>com.quantum.Homepage.VerifyTestimonialQuotes</td></tr>
+<tr><td>com.quantum.Homepage.EnsureTestimonialAttribution</td></tr>
+<tr><td>com.quantum.Homepage.setUp</td></tr>
+<tr><td>com.quantum.Homepage.CheckTestimonialAddition</td></tr>
+<tr><td>com.quantum.Homepage.VerifyTestimonialSorting</td></tr>
+<tr><td>com.quantum.Homepage.FeaturedContent</td></tr>
+<tr><td>com.quantum.Homepage.ValidateTestimonialContent</td></tr>
+<tr><td>com.quantum.Homepage.EnsureTestimonialImagesDisplay</td></tr>
+<tr><td>com.quantum.Homepage.HomepageImages</td></tr>
+<tr><td>com.quantum.Homepage.NavigationCheckTest</td></tr>
+<tr><td>com.quantum.Homepage.CheckTestimonialAuthorNames</td></tr>
 </table>
