--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,15 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">35,476</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">6,505</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="6">com.quantum.Header</td><td><a href="#m0">BookWorkshopLinkTest</a></td><td rowspan="1">1707395923908</td><td rowspan="1">6250</td></tr><tr class="passedeven"><td><a href="#m1">HomeLinkTest</a></td><td rowspan="1">1707395917781</td><td rowspan="1">6123</td></tr><tr class="passedeven"><td><a href="#m2">LogoLinkTest</a></td><td rowspan="1">1707395911606</td><td rowspan="1">6173</td></tr><tr class="passedeven"><td><a href="#m3">LogoVisibilityTest</a></td><td rowspan="1">1707395905273</td><td rowspan="1">6329</td></tr><tr class="passedeven"><td><a href="#m4">TestimonialsLinkTest</a></td><td rowspan="1">1707395930168</td><td rowspan="1">6237</td></tr><tr class="passedeven"><td><a href="#m5">setUp</a></td><td rowspan="1">1707395900995</td><td rowspan="1">4247</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.quantum.Homepage</td><td><a href="#m0">FooterNavigation</a></td><td rowspan="1">1707469685594</td><td rowspan="1">6431</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.quantum.Header#BookWorkshopLinkTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.quantum.Header#HomeLinkTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.quantum.Header#LogoLinkTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.quantum.Header#LogoVisibilityTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.quantum.Header#TestimonialsLinkTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">com.quantum.Header#setUp</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.quantum.Homepage#FooterNavigation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
