--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,20 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ceec94">  <td>24/02/08 18:08:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Header.LogoVisibilityTest()[pri:2, instance:com.quantum.Header@1af1347d]">LogoVisibilityTest</td> 
-  <td>main@1151020327</td>   <td></td> </tr>
-<tr bgcolor="ceec94">  <td>24/02/08 18:08:37</td>   <td>12508</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Header.HomeLinkTest()[pri:4, instance:com.quantum.Header@1af1347d]">HomeLinkTest</td> 
-  <td>main@1151020327</td>   <td></td> </tr>
-<tr bgcolor="ceec94">  <td>24/02/08 18:08:56</td>   <td>31255</td> <td title="&lt;&lt;Header.teardown()[pri:0, instance:com.quantum.Header@1af1347d]">&lt;&lt;teardown</td> 
+<tr bgcolor="78bcd7">  <td>24/02/09 14:38:01</td>   <td>0</td> <td title="&gt;&gt;Homepage.setUp()[pri:0, instance:com.quantum.Homepage@b273a59]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1151020327</td>   <td></td> </tr>
-<tr bgcolor="ceec94">  <td>24/02/08 18:08:31</td>   <td>6333</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Header.LogoLinkTest()[pri:3, instance:com.quantum.Header@1af1347d]">LogoLinkTest</td> 
-  <td>main@1151020327</td>   <td></td> </tr>
-<tr bgcolor="ceec94">  <td>24/02/08 18:08:43</td>   <td>18635</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Header.BookWorkshopLinkTest()[pri:5, instance:com.quantum.Header@1af1347d]">BookWorkshopLinkTest</td> 
-  <td>main@1151020327</td>   <td></td> </tr>
-<tr bgcolor="ceec94">  <td>24/02/08 18:08:20</td>   <td>-4278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Header.setUp()[pri:1, instance:com.quantum.Header@1af1347d]">setUp</td> 
-  <td>main@1151020327</td>   <td></td> </tr>
-<tr bgcolor="ceec94">  <td>24/02/08 18:08:15</td>   <td>-9369</td> <td title="&gt;&gt;Header.setUp()[pri:0, instance:com.quantum.Header@1af1347d]">&gt;&gt;setUp</td> 
+<tr bgcolor="78bcd7">  <td>24/02/09 14:38:12</td>   <td>10927</td> <td title="&lt;&lt;Homepage.teardown()[pri:0, instance:com.quantum.Homepage@b273a59]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1151020327</td>   <td></td> </tr>
-<tr bgcolor="ceec94">  <td>24/02/08 18:08:50</td>   <td>24895</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Header.TestimonialsLinkTest()[pri:6, instance:com.quantum.Header@1af1347d]">TestimonialsLinkTest</td> 
+<tr bgcolor="78bcd7">  <td>24/02/09 14:38:05</td>   <td>4390</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Homepage.FooterNavigation()[pri:24, instance:com.quantum.Homepage@b273a59]">FooterNavigation</td> 
   <td>main@1151020327</td>   <td></td> </tr>
 </table>
