--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\SAURABH\AppData\Local\Temp\testng-eclipse--1074675731\testng-customsuite.xml</span>
+                    <span>C:\Users\SAURABH\AppData\Local\Temp\testng-eclipse-1864350739\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.quantum.Homepage" class="method navigator-link" hash-for-method="FooterNavigation">FooterNavigation</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.quantum.BookWorkshop" class="method navigator-link" hash-for-method="Presenceofworkshopform">Presenceofworkshopform</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.quantum.Homepage</span>
+              <span class="class-name">com.quantum.BookWorkshop</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="FooterNavigation">
-                  </a> <!-- FooterNavigation -->
-                  <span class="method-name">FooterNavigation</span>
+                  <a name="Presenceofworkshopform">
+                  </a> <!-- Presenceofworkshopform -->
+                  <span class="method-name">Presenceofworkshopform</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\SAURABH\AppData\Local\Temp\testng-eclipse--1074675731\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\SAURABH\AppData\Local\Temp\testng-eclipse-1864350739\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.quantum.Homepage&quot;&gt;
+      &lt;class name=&quot;com.quantum.BookWorkshop&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;FooterNavigation&quot;/&gt;
+          &lt;include name=&quot;Presenceofworkshopform&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- com.quantum.Homepage --&gt;
+      &lt;/class&gt; &lt;!-- com.quantum.BookWorkshop --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'FooterNavigation')
-data.setCell(0, 2, 'com.quantum.Homepage')
-data.setCell(0, 3, 6431);
+data.setCell(0, 1, 'Presenceofworkshopform')
+data.setCell(0, 2, 'com.quantum.BookWorkshop')
+data.setCell(0, 3, 12499);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 12 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -213,57 +213,31 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">23 ignored methods</span>
+            <span class="header-content">10 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">com.quantum.Homepage</span>
+              <span class="ignored-class-name">com.quantum.BookWorkshop</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">CheckTestimonialTransitionSpeed</span>
+                <span class="ignored-method-name">Checkfeebasedongrade</span>
                 <br/>
-                <span class="ignored-method-name">VerifyTestimonialCarousel</span>
+                <span class="ignored-method-name">Bannercontainsinformation</span>
                 <br/>
-                <span class="ignored-method-name">TestTestimonialEdit</span>
+                <span class="ignored-method-name">Verifytheresponsivenessofthebanner</span>
                 <br/>
-                <span class="ignored-method-name">TestTestimonialRemoval</span>
+                <span class="ignored-method-name">Verifydisplayofworkshopfees</span>
                 <br/>
-                <span class="ignored-method-name">CheckTestimonialTruncation</span>
+                <span class="ignored-method-name">Ensureformatoffee</span>
                 <br/>
-                <span class="ignored-method-name">TestimonialsSectionNavigationTest</span>
+                <span class="ignored-method-name">Confirmonegradeselected</span>
                 <br/>
-                <span class="ignored-method-name">CheckTestimonialVisibility</span>
-                <br/>
-                <span class="ignored-method-name">NavigateThroughTestimonials</span>
-                <br/>
-                <span class="ignored-method-name">LoadHomepage</span>
-                <br/>
-                <span class="ignored-method-name">CheckTestimonialFormatting</span>
-                <br/>
-                <span class="ignored-method-name">VerifyTestimonialsSectionPresence</span>
-                <br/>
-                <span class="ignored-method-name">EnsureTestimonialLanguage</span>
-                <br/>
-                <span class="ignored-method-name">VerifyTestimonialQuotes</span>
-                <br/>
-                <span class="ignored-method-name">EnsureTestimonialAttribution</span>
+                <span class="ignored-method-name">Gradesfrom1to7arelisted</span>
                 <br/>
                 <span class="ignored-method-name">setUp</span>
                 <br/>
-                <span class="ignored-method-name">CheckTestimonialAddition</span>
+                <span class="ignored-method-name">Validatdefaulgrade</span>
                 <br/>
-                <span class="ignored-method-name">VerifyTestimonialSorting</span>
-                <br/>
-                <span class="ignored-method-name">FeaturedContent</span>
-                <br/>
-                <span class="ignored-method-name">ValidateTestimonialContent</span>
-                <br/>
-                <span class="ignored-method-name">EnsureTestimonialImagesDisplay</span>
-                <br/>
-                <span class="ignored-method-name">HomepageImages</span>
-                <br/>
-                <span class="ignored-method-name">NavigationCheckTest</span>
-                <br/>
-                <span class="ignored-method-name">CheckTestimonialAuthorNames</span>
+                <span class="ignored-method-name">Presenceofthebanner</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -275,18 +249,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.quantum.Homepage</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.quantum.BookWorkshop</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="test-method">
-                <span class="method-name">FooterNavigation</span>
-                <span class="method-start">4403 ms</span>
+                <span class="method-name">Presenceofworkshopform</span>
+                <span class="method-start">4387 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">10940 ms</span>
+                <span class="method-start">16995 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
