--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7a7da6">  <td>24/02/12 17:02:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookWorkshop.Presenceofworkshopform()[pri:11, instance:com.quantum.BookWorkshop@12365c88]">Presenceofworkshopform</td> 
+<tr bgcolor="7a7da6">  <td>24/02/17 19:12:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookWorkshop.Validationforemail()[pri:14, instance:com.quantum.BookWorkshop@77e2a6e2]">Validationforemail</td> 
   <td>main@1151020327</td>   <td></td> </tr>
-<tr bgcolor="7a7da6">  <td>24/02/12 17:02:47</td>   <td>-4371</td> <td title="&gt;&gt;BookWorkshop.setUp()[pri:0, instance:com.quantum.BookWorkshop@12365c88]">&gt;&gt;setUp</td> 
+<tr bgcolor="7a7da6">  <td>24/02/17 19:11:57</td>   <td>-10290</td> <td title="&gt;&gt;BookWorkshop.setUp()[pri:0, instance:com.quantum.BookWorkshop@77e2a6e2]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1151020327</td>   <td></td> </tr>
-<tr bgcolor="7a7da6">  <td>24/02/12 17:03:04</td>   <td>12608</td> <td title="&lt;&lt;BookWorkshop.teardown()[pri:0, instance:com.quantum.BookWorkshop@12365c88]">&lt;&lt;teardown</td> 
+<tr bgcolor="7a7da6">  <td>24/02/17 19:12:53</td>   <td>45554</td> <td title="&lt;&lt;BookWorkshop.teardown()[pri:0, instance:com.quantum.BookWorkshop@77e2a6e2]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1151020327</td>   <td></td> </tr>
 </table>
