--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\SAURABH\AppData\Local\Temp\testng-eclipse-1864350739\testng-customsuite.xml</span>
+                    <span>C:\Users\SAURABH\AppData\Local\Temp\testng-eclipse-1472812541\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.quantum.BookWorkshop" class="method navigator-link" hash-for-method="Presenceofworkshopform">Presenceofworkshopform</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.quantum.BookWorkshop" class="method navigator-link" hash-for-method="Validationforemail">Validationforemail</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,9 +126,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Presenceofworkshopform">
-                  </a> <!-- Presenceofworkshopform -->
-                  <span class="method-name">Presenceofworkshopform</span>
+                  <a name="Validationforemail">
+                  </a> <!-- Validationforemail -->
+                  <span class="method-name">Validationforemail</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\SAURABH\AppData\Local\Temp\testng-eclipse-1864350739\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\SAURABH\AppData\Local\Temp\testng-eclipse-1472812541\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -147,7 +147,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;com.quantum.BookWorkshop&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;Presenceofworkshopform&quot;/&gt;
+          &lt;include name=&quot;Validationforemail&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- com.quantum.BookWorkshop --&gt;
     &lt;/classes&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Presenceofworkshopform')
+data.setCell(0, 1, 'Validationforemail')
 data.setCell(0, 2, 'com.quantum.BookWorkshop')
-data.setCell(0, 3, 12499);
+data.setCell(0, 3, 45477);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 12 seconds</span>
+              <span class="suite-total-time">Total running time: 45 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -213,31 +213,37 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">10 ignored methods</span>
+            <span class="header-content">13 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">com.quantum.BookWorkshop</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">Checkfeebasedongrade</span>
-                <br/>
-                <span class="ignored-method-name">Bannercontainsinformation</span>
-                <br/>
-                <span class="ignored-method-name">Verifytheresponsivenessofthebanner</span>
-                <br/>
-                <span class="ignored-method-name">Verifydisplayofworkshopfees</span>
-                <br/>
-                <span class="ignored-method-name">Ensureformatoffee</span>
-                <br/>
-                <span class="ignored-method-name">Confirmonegradeselected</span>
+                <span class="ignored-method-name">setUp</span>
                 <br/>
                 <span class="ignored-method-name">Gradesfrom1to7arelisted</span>
                 <br/>
-                <span class="ignored-method-name">setUp</span>
+                <span class="ignored-method-name">Ensureformatoffee</span>
+                <br/>
+                <span class="ignored-method-name">Presenceofworkshopform</span>
+                <br/>
+                <span class="ignored-method-name">Validinformation</span>
+                <br/>
+                <span class="ignored-method-name">Verifydisplayofworkshopfees</span>
+                <br/>
+                <span class="ignored-method-name">Verifytheresponsivenessofthebanner</span>
+                <br/>
+                <span class="ignored-method-name">Checkfeebasedongrade</span>
+                <br/>
+                <span class="ignored-method-name">Presenceofthebanner</span>
                 <br/>
                 <span class="ignored-method-name">Validatdefaulgrade</span>
                 <br/>
-                <span class="ignored-method-name">Presenceofthebanner</span>
+                <span class="ignored-method-name">Emptyform</span>
+                <br/>
+                <span class="ignored-method-name">Bannercontainsinformation</span>
+                <br/>
+                <span class="ignored-method-name">Confirmonegradeselected</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -255,12 +261,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="test-method">
-                <span class="method-name">Presenceofworkshopform</span>
-                <span class="method-start">4387 ms</span>
+                <span class="method-name">Validationforemail</span>
+                <span class="method-start">10326 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">16995 ms</span>
+                <span class="method-start">55880 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
