--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,15 +1,7 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>com.quantum.BookWorkshop.setUp</td></tr>
-<tr><td>com.quantum.BookWorkshop.Gradesfrom1to7arelisted</td></tr>
-<tr><td>com.quantum.BookWorkshop.Ensureformatoffee</td></tr>
-<tr><td>com.quantum.BookWorkshop.Presenceofworkshopform</td></tr>
-<tr><td>com.quantum.BookWorkshop.Validinformation</td></tr>
-<tr><td>com.quantum.BookWorkshop.Verifydisplayofworkshopfees</td></tr>
-<tr><td>com.quantum.BookWorkshop.Verifytheresponsivenessofthebanner</td></tr>
-<tr><td>com.quantum.BookWorkshop.Checkfeebasedongrade</td></tr>
-<tr><td>com.quantum.BookWorkshop.Presenceofthebanner</td></tr>
-<tr><td>com.quantum.BookWorkshop.Validatdefaulgrade</td></tr>
-<tr><td>com.quantum.BookWorkshop.Emptyform</td></tr>
-<tr><td>com.quantum.BookWorkshop.Bannercontainsinformation</td></tr>
-<tr><td>com.quantum.BookWorkshop.Confirmonegradeselected</td></tr>
+<tr><td>com.quantum.Curriculum.setUp</td></tr>
+<tr><td>com.quantum.Curriculum.CourseDescriptions</td></tr>
+<tr><td>com.quantum.Curriculum.CourseInformation</td></tr>
+<tr><td>com.quantum.Curriculum.DisplayofCourses</td></tr>
+<tr><td>com.quantum.Curriculum.AccessingtheCurriculumPage</td></tr>
 </table>
